<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.admin.invoice.InvoiceActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/SubtotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SubtotalLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="25dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/DiscountPercentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DiscountPercentLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/DiscountPercentAmtLabel"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/DiscountAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DiscountAmountLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/DiscountPercentLabel"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/DiscountPercentLabel"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/DiscountPercentLabel" />

    <TextView
        android:id="@+id/TotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TotalLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/DiscountAmountLabel"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/InputTextEdit"
        android:layout_width="151dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="numberDecimal"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/DiscountPercentAmtLabel"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="18dp"
        app:layout_constraintLeft_toLeftOf="@+id/DiscountPercentAmtLabel"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteY="7dp" />

    <TextView
        android:id="@+id/DiscountPercentAmtLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DiscountPercentAmtLabel"
        android:textSize="20sp"
        android:layout_marginStart="14dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="72dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/DiscountPercentLabel" />

    <TextView
        android:id="@+id/DiscountAmtLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DiscountAmtLabel"
        android:textSize="20sp"
        android:layout_marginStart="14dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/DiscountAmountLabel"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/DiscountAmountLabel" />

    <TextView
        android:id="@+id/TotalAmtLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TotalAmtLabel"
        android:textSize="20sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/DiscountAmtLabel"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/DiscountAmtLabel" />
</android.support.constraint.ConstraintLayout>
